# myftp

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md
includes/: commands.h  ftp.h  ftp_message.h  user.h
sources/: count_to_split.c  data_transfer.c  ftp_command.c  main.c  my_str_to_array.c  server.c  str_clear.c  utils.c
sources/commands/: cdup.c  cwd.c  dele.c  help.c  list.c  noop.c  pass.c  pasv.c  port.c  pwd.c  quit.c  retr.c  stor.c  syst.c  user.c
